--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,11 @@ jobs:
           name: run integration tests 
           command: |
             ./integration-tests/test.sh
+workflows:
+  version: 2
+  build:
+    jobs:
+      - test
     
         
     
